top navbar no longer blocks top content on smaller display

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,5 +1,6 @@
 body{
 	margin: 20px;
+	padding-top: 40px;
 }
 .searchbar{
 	float: right;
